--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <body>
 <title>Puzzle links</title>
-<a href="carljalal.github.io/memorystring"></a>
-<a href="carljalal.github.io/memorymaze"></a>
-<a href="carljalal.github.io/memorypath"></a>
-<a href="carljalal.github.io/circle_colorchange"></a>
-<a href="carljalal.github.io/compositelogic"></a>
-<a href="carljalal.github.io/4car"></a>
-<a href="carljalal.github.io/reactionspeed"></a>
-<a href="carljalal.github.io/whichismissing"></a>
+<a href="carljalal.github.io/memorystring">memorystring</a>
+<a href="carljalal.github.io/memorymaze">memorymaze</a>
+<a href="carljalal.github.io/memorypath">memorypath</a>
+<a href="carljalal.github.io/circle_colorchange">colorchange</a>
+<a href="carljalal.github.io/compositelogic">compositelogic</a>
+<a href="carljalal.github.io/4car">4car</a>
+<a href="carljalal.github.io/reactionspeed">reactionspeed</a>
+<a href="carljalal.github.io/whichismissing">whichismissing</a>
 </body>
 </html>
