fix links to http://

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <body>
 <title>Puzzle links</title>
-<a href="carljalal.github.io/memorystring">memorystring</a>
-<a href="carljalal.github.io/memorymaze">memorymaze</a>
-<a href="carljalal.github.io/memorypath">memorypath</a>
-<a href="carljalal.github.io/circle_colorchange">colorchange</a>
-<a href="carljalal.github.io/compositelogic">compositelogic</a>
-<a href="carljalal.github.io/4car">4car</a>
-<a href="carljalal.github.io/reactionspeed">reactionspeed</a>
-<a href="carljalal.github.io/whichismissing">whichismissing</a>
+<a href="http://carljalal.github.io/memorystring">memorystring</a><br>
+<a href="http://carljalal.github.io/memorymaze">memorymaze</a><br>
+<a href="http://carljalal.github.io/memorypath">memorypath</a><br>
+<a href="http://carljalal.github.io/circle_colorchange">colorchange</a><br>
+<a href="http://carljalal.github.io/compositelogic">compositelogic</a><br>
+<a href="http://carljalal.github.io/4car">4car</a><br>
+<a href="http://carljalal.github.io/reactionspeed">reactionspeed</a><br>
+<a href="http://carljalal.github.io/whichismissing">whichismissing</a><br>
 </body>
 </html>
